# SmartDisplayServerKit

./: README.md  pyproject.toml
src/smartdisplayserverkit/: __init__.py
src/smartdisplayserverkit/utils/: singleton.py
src/test/: test_util.py
